--- a/instance_11_Chernarus/HiveExt.ini
+++ b/instance_11_Chernarus/HiveExt.ini
@@ -38,7 +38,7 @@ Database = overpoch
 ;Username to connect with
 Username = dayz_epoch
 ;Password to authenticate with (default is blank)
-Password = sadminlogin
+Password = pswd
 
 ;If using OFFICIAL hive, the settings in this section have no effect, appropriate layout will be used
 [Characters]
