--- a/instance_11_Chernarus/config.cfg
+++ b/instance_11_Chernarus/config.cfg
@@ -4,7 +4,7 @@ steamQueryPort = 6301;
 
 hostName = "UKN OVERPOCH NEW DB|25K BANK|HIGH LOOT|SEMI MIL| 1.0.5.1";
 password = "";
-passwordAdmin = "uknrcon1051login";
+passwordAdmin = "pswd";
 maxPlayers = 40;
 logFile = "server_log.txt";
 voteThreshold = 2;
